[package]
name = "rel-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
chumsky = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rel-lang-dd = { workspace = true, features = ["sync"] }
rustyline = { workspace = true }
snafu = { workspace = true }
